fix: AI comments